# CodecTune

./: README.md  REPRODUCE.md
ACTGAN/code/ACTGAN/: datanumberized.py  dataout.py  normalGAN.py
ACTGAN/code/random/: top-config.py  x265.py
CDBTune/: README.md  codecDriverSlurmScript  glob.py  globfile  requirements.txt  submit_job.sh  submit_training.sh  trainingSlurmScript
CDBTune/environment/: CMakeLists.txt  __init__.py  configs.py  driver.py  encoder_tune.cpp  knobs.py  myencoder.py  mysql.py  test.py
CDBTune/models/: __init__.py  ddpg.py  ou_process.py
CDBTune/results/: fast_segments.out  faster_segments.out  medium_segments.out  slow_segments.out  superfast_segments.out  ultrafast_segments.out  veryfast_segments.out
CDBTune/results/training/: slurm-2669614.out
CDBTune/results/training/model_params/: train_ddpg_1620177125_1000_actor.pth  train_ddpg_1620177125_1000_critic.pth  train_ddpg_1620177125_1001_actor.pth  train_ddpg_1620177125_1001_critic.pth  train_ddpg_1620177125_1002_actor.pth  train_ddpg_1620177125_1002_critic.pth  train_ddpg_1620177125_1003_actor.pth  train_ddpg_1620177125_1003_critic.pth  train_ddpg_1620177125_1004_actor.pth  train_ddpg_1620177125_1004_critic.pth  train_ddpg_1620177125_1005_actor.pth  train_ddpg_1620177125_1005_critic.pth  (+2140 more)
CDBTune/scripts/: prepare.sh  run_sysbench.sh
CDBTune/server/: server.py
CDBTune/tuner/: evaluate.py  train.py
codec-driver/: CMakeLists.txt  README.md  codecDriverSlurmScript  main.cpp  preset-perf.py  preset-plot.py  submit_job.sh
fixed-workload/: README.md  preset-cmp.py  tuner.py
(+591 files in other folders)
